methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:17: error: not found: value piskupBaggle
  piskupBaggle()
  ^